@@ -940,6 +940,14 @@ Enquire::set_sort_by_relevance_then_value(Xapian::valueno sort_key,
 MSet
 Enquire::get_mset(Xapian::doccount first, Xapian::doccount maxitems,
 		  Xapian::doccount check_at_least, const RSet *rset,
+		  const MatchDecider *mdecider) const
+{
+    return get_mset(first, maxitems, check_at_least, rset, mdecider, NULL);
+}
+
+MSet
+Enquire::get_mset(Xapian::doccount first, Xapian::doccount maxitems,
+		  Xapian::doccount check_at_least, const RSet *rset,
 		  const MatchDecider *mdecider,
 		  const MatchDecider *matchspy) const
 {
